--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -8,6 +8,11 @@ title: Homepage
 .main
 	.hero_img
 		%img.hero(src="images_s/hero/hero2.png")
+	.hero_text_wrapper
+		.hero_text_large
+			We have been proudly embracing science since 1845.
+		.hero_text_small
+			Poets say science takes away from the beauty of the stars - mere globs of gas atoms. I, too, can see the stars on a desert night, and feel them. But do I see less or more? - Richard Feynman
 	.magzine_wrapper
 		.index_row
 			.mag_box_large_wrapper
@@ -48,171 +53,183 @@ title: Homepage
 				%h1 MOST POPULAR
 			.section_line
 			.card_big_wrapper
-				.card_big
-					.card_picBox_big
-						.card_thumbnail_big
-							%img(src="images_s/card_big/img1.png")
-					.card_big_text
-						.date
-							4 hours ago — Alexandra Witze & Nature magazine
-						.post_title
-							Science Funders Struggle to Deal with Sexual Harassers
-						.description
-							US science agencies threaten harsh penalties, but many have yet to take action.
-					.card_big_text_bottom
-						.line_dark
-						.tag_big
-							THE SCIENCES
+				%a{:href => 'post.html'}
+					.card_big
+						.card_picBox_big
+							.card_thumbnail_big
+								%img(src="images_s/card_big/img1.png")
+						.card_big_text
+							.date
+								4 hours ago — Alexandra Witze & Nature magazine
+							.post_title
+								Science Funders Struggle to Deal with Sexual Harassers
+							.description
+								US science agencies threaten harsh penalties, but many have yet to take action.
+						.card_big_text_bottom
+							.line_dark
+							.tag_big
+								THE SCIENCES
 			.card_big_wrapper
-				.card_big
-					.card_picBox_big
-						.card_thumbnail_big
-							%img(src="images_s/card_big/img2.png")
-					.card_big_text
-						.date
-							February 8, 2016 — Jordana Cepelewicz
-						.post_title
-							A Single Concussion May Triple the Long-Term Risk of Suicide
-						.description
-							A new study of mild concussions in Canadian adults suggests the risks are even higher for recreational injuries
-					.card_big_text_bottom
-						.line_dark
-						.tag_big
-							HEALTH - NEUROLOGICAL
+				%a{:href => 'post.html'}
+					.card_big
+						.card_picBox_big
+							.card_thumbnail_big
+								%img(src="images_s/card_big/img2.png")
+						.card_big_text
+							.date
+								February 8, 2016 — Jordana Cepelewicz
+							.post_title
+								A Single Concussion May Triple the Long-Term Risk of Suicide
+							.description
+								A new study of mild concussions in Canadian adults suggests the risks are even higher for recreational injuries
+						.card_big_text_bottom
+							.line_dark
+							.tag_big
+								HEALTH - NEUROLOGICAL
 			.card_big_wrapper
-				.card_big
-					.card_picBox_big
-						.card_thumbnail_big
-							%img(src="images_s/card_big/img3.png")
-					.card_big_text
-						.date
-							February 3, 2016 — Apoorva Mandavilli
-						.post_title
-							India's Government Is Becoming Increasingly Antiscience
-						.description
-							Scientists join writers, artists and historians in protesting the Modi government’s growing interference...
-					.card_big_text_bottom
-						.line_dark
-						.tag_big
-							THE SCIENCES
+				%a{:href => 'post.html'}
+					.card_big
+						.card_picBox_big
+							.card_thumbnail_big
+								%img(src="images_s/card_big/img3.png")
+						.card_big_text
+							.date
+								February 3, 2016 — Apoorva Mandavilli
+							.post_title
+								India's Government Is Becoming Increasingly Antiscience
+							.description
+								Scientists join writers, artists and historians in protesting the Modi government’s growing interference...
+						.card_big_text_bottom
+							.line_dark
+							.tag_big
+								THE SCIENCES
 			.card_big_wrapper
-				.card_big
-					.card_picBox_big
-						.card_thumbnail_big
-							%img(src="images_s/card_big/img4.png")
-					.card_big_text
-						.date
-							April 15, 2016
-						.post_title
-							Latest Battle to Wipe Out Polio Begins with Vast Vaccine Switch
-						.description
-							Massive push that begins this weekend will include more than 150 countries
-					.card_big_text_bottom
-						.line_dark
-						.tag_big
-							PUBLIC HEALTH
+				%a{:href => 'post.html'}
+					.card_big
+						.card_picBox_big
+							.card_thumbnail_big
+								%img(src="images_s/card_big/img4.png")
+						.card_big_text
+							.date
+								April 15, 2016
+							.post_title
+								Latest Battle to Wipe Out Polio Begins with Vast Vaccine Switch
+							.description
+								Massive push that begins this weekend will include more than 150 countries
+						.card_big_text_bottom
+							.line_dark
+							.tag_big
+								PUBLIC HEALTH
 	.shelf_wrapper
 		.index_row
 			.section_title
 				%h1 JUST ADDED
 			.section_line
 			.card_small_wrapper
-				.card_small
-					.card_picBox_small
-						.card_thumbnail_small
-							%img(src="images_s/card_small/img1.png")
-					.card_small_text
-						.post_title2
-							Science Funders Struggle to Deal with Sexual Harassers
-					.card_small_text_bottom
-						.line_dark2
-						.tag_big2
-							SUSTAINABILITY
+				%a{:href => 'post.html'}
+					.card_small
+						.card_picBox_small
+							.card_thumbnail_small
+								%img(src="images_s/card_small/img1.png")
+						.card_small_text
+							.post_title2
+								Science Funders Struggle to Deal with Sexual Harassers
+						.card_small_text_bottom
+							.line_dark2
+							.tag_big2
+								SUSTAINABILITY
 			.card_small_wrapper
-				.card_small
-					.card_picBox_small
-						.card_thumbnail_small
-							%img(src="images_s/card_small/img2.png")
-					.card_small_text
-						.post_title2
-							U.S. to Study Zika Link to Guillain–Barré in Puerto Rico
-					.card_small_text_bottom
-						.line_dark2
-						.tag_big2
-							HEALTH - PUBLIC
+				%a{:href => 'post.html'}
+					.card_small
+						.card_picBox_small
+							.card_thumbnail_small
+								%img(src="images_s/card_small/img2.png")
+						.card_small_text
+							.post_title2
+								U.S. to Study Zika Link to Guillain–Barré in Puerto Rico
+						.card_small_text_bottom
+							.line_dark2
+							.tag_big2
+								HEALTH - PUBLIC
 			.card_small_wrapper
-				.card_small
-					.card_picBox_small
-						.card_thumbnail_small
-							%img(src="images_s/card_small/img3.png")
-					.card_small_text
-						.post_title2
-							Beyond Resveratrol: The Anti-Aging NAD Fad
-					.card_small_text_bottom
-						.line_dark2
-						.tag_big2
-							HEALTH
+				%a{:href => 'post.html'}
+					.card_small
+						.card_picBox_small
+							.card_thumbnail_small
+								%img(src="images_s/card_small/img3.png")
+						.card_small_text
+							.post_title2
+								Beyond Resveratrol: The Anti-Aging NAD Fad
+						.card_small_text_bottom
+							.line_dark2
+							.tag_big2
+								HEALTH
 			.card_small_wrapper
-				.card_small
-					.card_picBox_small
-						.card_thumbnail_small
-							%img(src="images_s/card_small/img4.png")
-					.card_small_text
-						.post_title2
-							The Best Diet for Your Brain
-					.card_small_text_bottom
-						.line_dark2
-						.tag_big2
-							HEALTH - NEUROLOGICAL
+				%a{:href => 'post.html'}
+					.card_small
+						.card_picBox_small
+							.card_thumbnail_small
+								%img(src="images_s/card_small/img4.png")
+						.card_small_text
+							.post_title2
+								The Best Diet for Your Brain
+						.card_small_text_bottom
+							.line_dark2
+							.tag_big2
+								HEALTH - NEUROLOGICAL
 		.index_row
 			.card_small_wrapper
-				.card_small
-					.card_picBox_small
-						.card_thumbnail_small
-							%img(src="images_s/card_small/img5.png")
-					.card_small_text
-						.post_title2
-							The Truth About Exoplanets
-					.card_small_text_bottom
-						.line_dark2
-						.tag_big2
-							THE SCIENCES - SPACE
+				%a{:href => 'post.html'}
+					.card_small
+						.card_picBox_small
+							.card_thumbnail_small
+								%img(src="images_s/card_small/img5.png")
+						.card_small_text
+							.post_title2
+								The Truth About Exoplanets
+						.card_small_text_bottom
+							.line_dark2
+							.tag_big2
+								THE SCIENCES - SPACE
 			.card_small_wrapper
-				.card_small
-					.card_picBox_small
-						.card_thumbnail_small
-							%img(src="images_s/card_small/img6.png")
-					.card_small_text
-						.post_title2
-							Apple Opposes Order to Help FBI Unlock iPhone
-					.card_small_text_bottom
-						.line_dark2
-						.tag_big2
-							TECH
+				%a{:href => 'post.html'}
+					.card_small
+						.card_picBox_small
+							.card_thumbnail_small
+								%img(src="images_s/card_small/img6.png")
+						.card_small_text
+							.post_title2
+								Apple Opposes Order to Help FBI Unlock iPhone
+						.card_small_text_bottom
+							.line_dark2
+							.tag_big2
+								TECH
 			.card_small_wrapper
-				.card_small
-					.card_picBox_small
-						.card_thumbnail_small
-							%img(src="images_s/card_small/img7.png")
-					.card_small_text
-						.post_title2
-							The Science behind the DEA's Long War on Marijuana
-					.card_small_text_bottom
-						.line_dark2
-						.tag_big2
-							POLICY & ETHICS
+				%a{:href => 'post.html'}
+					.card_small
+						.card_picBox_small
+							.card_thumbnail_small
+								%img(src="images_s/card_small/img7.png")
+						.card_small_text
+							.post_title2
+								The Science behind the DEA's Long War on Marijuana
+						.card_small_text_bottom
+							.line_dark2
+							.tag_big2
+								POLICY & ETHICS
 			.card_small_wrapper
-				.card_small
-					.card_picBox_small
-						.card_thumbnail_small
-							%img(src="images_s/card_small/img8.png")
-					.card_small_text
-						.post_title2
-							Drones Could Speed Up HIV Tests In Remote Areas
-					.card_small_text_bottom
-						.line_dark2
-						.tag_big2
-							PUBLIC HEALTH
+				%a{:href => 'post.html'}
+					.card_small
+						.card_picBox_small
+							.card_thumbnail_small
+								%img(src="images_s/card_small/img8.png")
+						.card_small_text
+							.post_title2
+								Drones Could Speed Up HIV Tests In Remote Areas
+						.card_small_text_bottom
+							.line_dark2
+							.tag_big2
+								PUBLIC HEALTH
 	.shelf_wrapper
 		.index_row
 			.section_title
@@ -226,41 +243,44 @@ title: Homepage
 						.post_title_tiny
 							17 Governors Agree to Pursue Clean Energy 
 			.card_tiny_wrapper
-				.card_tiny
-					.card_picBox_tiny
-						.card_thumbnail_tiny
-							%img(src="images_s/card_tiny/pic1.png")
-					.card_tiny_text
-						.post_title_tiny
-							The Dark Side of LED Lightbulbs
-					.card_tiny_text_bottom
-						.line_dark_tiny
-						.tag_tiny
-							SUSTAINABILITY
+				%a{:href => 'post.html'}
+					.card_tiny
+						.card_picBox_tiny
+							.card_thumbnail_tiny
+								%img(src="images_s/card_tiny/pic1.png")
+						.card_tiny_text
+							.post_title_tiny
+								The Dark Side of LED Lightbulbs
+						.card_tiny_text_bottom
+							.line_dark_tiny
+							.tag_tiny
+								SUSTAINABILITY
 			.card_tiny_wrapper
-				.card_tiny
-					.card_picBox_tiny
-						.card_thumbnail_tiny
-							%img(src="images_s/card_tiny/pic2.png")
-					.card_tiny_text
-						.post_title_tiny
-							Living in a Quantum World
-					.card_tiny_text_bottom
-						.line_dark_tiny
-						.tag_tiny
-							SUSTAINABILITY
+				%a{:href => 'post.html'}
+					.card_tiny
+						.card_picBox_tiny
+							.card_thumbnail_tiny
+								%img(src="images_s/card_tiny/pic2.png")
+						.card_tiny_text
+							.post_title_tiny
+								Living in a Quantum World
+						.card_tiny_text_bottom
+							.line_dark_tiny
+							.tag_tiny
+								SUSTAINABILITY
 			.card_tiny_wrapper
-				.card_tiny
-					.card_picBox_tiny
-						.card_thumbnail_tiny
-							%img(src="images_s/card_tiny/pic3.png")
-					.card_tiny_text
-						.post_title_tiny
-							Could a Lack of Water Cause Wars?
-					.card_tiny_text_bottom
-						.line_dark_tiny
-						.tag_tiny
-							CLIMATE
+				%a{:href => 'post.html'}
+					.card_tiny
+						.card_picBox_tiny
+							.card_thumbnail_tiny
+								%img(src="images_s/card_tiny/pic3.png")
+						.card_tiny_text
+							.post_title_tiny
+								Could a Lack of Water Cause Wars?
+						.card_tiny_text_bottom
+							.line_dark_tiny
+							.tag_tiny
+								CLIMATE
 	.shelf_wrapper
 		.index_row
 			.section_title
